# news_digest

./: .gitignore  ARCHITECTURE.md  MIGRATION_GUIDE.md  SYSTEM_FLOW.md  fix_writers.py  main.py  pdf_output.txt  pdf_output_utf8.txt  production_main.py  pyproject.toml  read_pdf.py  reorganize_agents.py  requirements.txt  scaffold.py  scaffold_workflow.py  test_pdf.py  test_run.py  test_tool.py
agents/: corrector_agent.py  evaluator_agent.py  news_agent.py  research_agent.py  signal_processor_agent.py  supervisor_agent.py  writer_agent.py
agents/ai/: ai_news_agent.py  ai_relevance_agent.py  ai_research_agent.py  ai_signal_agent.py  ai_writer_agent.py
agents/core/: article_refiner.py  corrector_agent.py  deduplication_agent.py  evaluator_agent.py  news_agent.py  normalization_agent.py  prioritization_agent.py  relevance_agent.py  research_agent.py  router_agent.py  signal_processor_agent.py  supervisor_agent.py  verification_agent.py  writer_agent.py
agents/finance/: economy_agent.py  finance_news_agent.py  finance_signal_agent.py  finance_writer_agent.py  market_analysis_agent.py
agents/general/: general_analysis_agent.py  general_news_agent.py  general_relevance_agent.py  general_signal_agent.py  (+1 more)
backend/: main.py  requirements.txt
classification/: domain_classifier.py  scoring_engine.py
db/: init_db.py  postgres.py  repository.py  schema.sql
graph/: workflow.py
orchestrator/: system_orchestrator.py
pipelines/: ingestion.py
tools/: arxiv_tool.py  mcp_twitter_tool.py  search_tool.py
utils/: date_utils.py  logger.py  pdf_export.py
(+24 files in other folders)
